# faker-pyspark

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql.yml  python-package.yml
faker_pyspark/: __init__.py  pyspark.py
tests/: test_pyspark.py
